<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >

    <group
        android:id="@+id/nav_view"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_allStation"
            android:icon="@drawable/ic_directions_transit_black_24dp"
            android:title="All Stations" />

        <item
            android:id="@+id/nav_allPlace"
            android:icon="@drawable/ic_india_gate"
            android:title="All Places" />


        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="Metro map" />

        <item
            android:id="@+id/nav_webQ"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="Official website" />
        <item
            android:id="@+id/nav_tut"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="Tutorial (App)" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_recharge"
                android:icon="@drawable/ic_rupee"
                android:title="@string/menu_recharge" />
        </menu>
    </item>

</menu>
